sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:11: error: ';' expected but ')' found.
      if(max > temps){max = temp);imax=k}
                                ^